--- a/portfolio/src/components/contact/Contact.module.css
+++ b/portfolio/src/components/contact/Contact.module.css
@@ -60,6 +60,7 @@
 
 .link:hover {
   color: #ed8787;
+  cursor: pointer;
 }
 .text_light {
   color: white;
@@ -105,10 +106,22 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
+  color: white;
 }
 
 .but_red {
+  border: 2px solid rgb(244, 69, 69);
+  border-radius: 8px;
+  font-size: 19px;
+  color: rgb(244, 69, 69);
+  font-weight: 500;
+  padding: 0.5rem;
+}
+
+.but_red:hover {
+  border: 2px solid black;
   background-color: rgb(244, 69, 69);
+  color: black;
   border-radius: 8px;
 }
 
@@ -151,14 +164,14 @@
 .contact_form textarea {
   background: transparent;
   font-size: 18px;
-  color: #333;
+  color: white;
   border-radius: 5px;
   box-shadow: none;
 }
 
 .contact_form input:focus,
 .contact_form textarea:focus {
-  background: rgba(250, 250, 250, 0.8);
+  background: rgba(0, 0, 0, 0.8);
   box-shadow: none;
 }
 
@@ -189,4 +202,11 @@
   .contact {
     height: auto;
   }
+}
+
+.error_message {
+  background-color: #ffcccb;
+  border-radius: 4px;
+  padding: 8px 16px 8px 16px;
+  width: 100%;
 }
