--- a/portfolio/src/components/working/Working.module.css
+++ b/portfolio/src/components/working/Working.module.css
@@ -14,17 +14,111 @@
   flex-direction: column;
   padding: 0.5rem;
   margin: 0.2rem;
-
 }
 
 .heading {
-  font-size: 35px;
+  font-size: 55px;
+  padding-bottom: 1rem;
+  text-align: center;
   color: white;
 }
-.works{
+.works {
   padding: 2rem;
   border: 2px solid white;
   border-radius: 10px;
   width: 80vw;
   margin: 1rem 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.work {
+  width: 320px;
+  margin: 1rem;
+  box-shadow: 5px 5px 20px #aaa;
+  position: relative;
+  overflow: hidden;
+  border-radius: 6px;
+  padding: 1rem 1.5rem 2rem 1.5rem;
+}
+.book_card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px;
+}
+.work img {
+  width: 100%;
+  border-radius: 6px;
+}
+
+.work_info {
+  color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.2rem;
+  padding: 0.5rem 1rem 1rem;
+  letter-spacing: 0.5px;
+  font-size: 28px;
+  transition: transform 0.3s ease-in;
+}
+
+.work_body {
+  transition: transform 0.3s ease-in;
+}
+
+.work:hover .work_info {
+  transform: translateY(-60%);
+}
+
+.work:hover .work_body {
+  transform: translateY(-20%);
+}
+
+.overview {
+  background-color: #fff;
+  padding: 2rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  max-height: 100%;
+  transform: translateY(101%);
+  overflow-y: auto;
+  transition: transform 0.3s ease-in;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  -moz-box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.work:hover .overview {
+  transform: translateY(0);
+}
+.back_content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.texting {
+  padding: 0.1rem;
+  font-size: 22px;
+}
+
+.about {
+  padding: 0.1rem;
+  font-size: 22px;
+  color: #f65454;
+}
+.button {
+  padding-top: 8px;
 }
