--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,10 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital@1&display=swap");
+* {
+  font-family: "Ibarra Real Nova", serif;
+}
 body {
   margin: 0;
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
 }
-html{
+html {
   margin: 0;
+  scroll-behavior: smooth;
   padding: 0;
+  overflow-x: hidden;
 }
