--- a/portfolio/src/components/aboutMe/AboutMe.module.css
+++ b/portfolio/src/components/aboutMe/AboutMe.module.css
@@ -101,3 +101,40 @@ span {
     flex-direction: column;
   }
 }
+
+@media (max-width: 650px) {
+  .row {
+    padding: 0;
+  }
+  .about {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media (max-width: 440px) {
+  .details_photo {
+    padding: 0;
+    margin: 0;
+    margin-top: 1.4rem;
+  }
+  .details {
+    padding-left: 0;
+  }
+  .photo {
+    width: auto;
+    padding: 0;
+    padding: 1rem;
+    margin-top: 1rem;
+  }
+  .photobox {
+    padding: 0;
+  }
+  .photo img {
+    border-radius: 12px;
+    height: 180px;
+  }
+  .details p {
+    font-size: 16px;
+  }
+}
