--- a/portfolio/src/components/language/Language.module.css
+++ b/portfolio/src/components/language/Language.module.css
@@ -6,7 +6,7 @@
 }
 
 .row {
-  padding: .1rem 1rem;
+  padding: 0.1rem 1rem;
 }
 
 .language {
@@ -28,8 +28,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: .1rem;
-  margin: .1rem;
+  padding: 0.1rem;
+  margin: 0.1rem;
   gap: 1rem;
 }
 
@@ -44,6 +44,16 @@
 .card {
   display: flex;
   border-radius: 12px;
-  padding: .1rem;
+  padding: 0.1rem;
   border: 2px solid white;
+}
+
+@media (max-width: 420px) {
+  .language {
+    padding: 0;
+    margin: 0;
+  }
+  .row {
+    padding: 0;
+  }
 }
