--- a/portfolio/src/components/last/Last.module.css
+++ b/portfolio/src/components/last/Last.module.css
@@ -65,4 +65,35 @@
     font-size: 14px;
   }
 }
+@media (max-width: 425px) {
+  .nav {
+    gap: 0.1rem;
+    font-size: 14px;
+    text-decoration: none;
+    flex-direction: column;
+  }
+  .nav_link {
+    letter-spacing: 0px;
+  }
+  .copyright {
+    font-size: 12px;
+  }
+  .last {
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    height: auto;
+  }
+  .row {
+    gap: 0.1rem;
+  }
+}
 
+p {
+  padding: 0;
+  margin: 0;
+  padding-bottom: 1rem;
+}
+
+a {
+  text-decoration: none;
+}
