--- a/portfolio/src/components/contact/Contact.module.css
+++ b/portfolio/src/components/contact/Contact.module.css
@@ -1,16 +1,14 @@
 .contact {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)),
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
     url(/contact.jpeg) no-repeat fixed center/cover;
   padding-top: 1rem;
   padding-bottom: 1rem;
   height: 75vh;
 }
-
 .container_fluid {
   width: 100%;
   height: 100%;
 }
-
 .row {
   display: flex;
   gap: 1rem;
@@ -21,21 +19,18 @@
   gap: 1rem;
   height: 100%;
 }
-
 .col_1 {
   flex: 6;
   margin: 2rem 3rem;
   height: 100%;
 }
-
 .col_2 {
   flex: 6;
   margin: 2rem 1rem;
   height: 100%;
 }
-
 .items_wrapper {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
     url(/runner.jpg) no-repeat center center/cover;
   border-radius: 5px;
   padding-top: 1rem;
@@ -66,7 +61,7 @@
   color: white;
 }
 .text_light_heading {
-  color: rgb(0, 0, 0);
+  color: white;
 }
 
 .red {
