--- a/portfolio/src/components/last/Last.module.css
+++ b/portfolio/src/components/last/Last.module.css
@@ -1,14 +1,12 @@
 .last {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  height: 15vh;
+  min-height: 10vh;
 }
-
 .container_fluid {
   width: 100%;
   height: 100%;
 }
-
 .row {
   display: flex;
   flex-direction: column;
@@ -17,40 +15,40 @@
   gap: 0.5rem;
   height: 100%;
 }
-
+.col {
+  padding: 0;
+}
 .nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
   font-size: 24px;
   text-decoration: none;
+  padding-left: 0rem;
+  gap: 0.5rem;
 }
-
 .nav_link {
   color: aliceblue;
   transition: all 0.3s;
   letter-spacing: 2px;
 }
-
 .copyright {
   font-size: 22px;
   color: rgb(255, 255, 255);
 }
-
 .footer-link {
   color: #eee;
   transition: all 0.3s;
 }
-
 .nav_link:hover {
   color: #70aed2;
 }
-
 .nav_item {
   list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 @media (max-width: 600px) {
   .nav {
     gap: 0.3rem;
@@ -87,13 +85,11 @@
     gap: 0.1rem;
   }
 }
-
 p {
   padding: 0;
   margin: 0;
   padding-bottom: 1rem;
 }
-
 a {
   text-decoration: none;
 }
