--- a/portfolio/src/components/navigation/Navigation.module.css
+++ b/portfolio/src/components/navigation/Navigation.module.css
@@ -1,4 +1,4 @@
-.positionfixed{
+.positionfixed {
   position: fixed;
   width: 100%;
   z-index: 10;
@@ -33,7 +33,7 @@
   width: 40px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: #233554;
+  background-color: var(--primary-color);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   position: absolute;
@@ -44,7 +44,7 @@
 }
 
 .hamburgerchange:hover {
-  background-color: #233554;
+  background-color: var(--primary-color);
 }
 
 .navigation {
@@ -55,7 +55,7 @@
   padding: 0% 2%;
   justify-content: space-between;
   align-items: center;
-  background-color: #233554;
+  background-color: var(--primary-color);
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -110,7 +110,7 @@
   width: 40px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: #233554;
+  background-color: var(--primary-color);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   position: absolute;
@@ -122,7 +122,7 @@
 }
 
 .hamburger:hover {
-  background-color: #233554;
+  background-color: var(--primary-color);
 }
 
 @media screen and (max-width: 720px) {
@@ -150,7 +150,7 @@
     flex-direction: column;
     width: 100%;
     height: auto;
-    background-color: #233554;
+    background-color: var(--primary-color);
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
     border-top: 1px solid black;
     list-style: none;
