--- a/portfolio/src/components/ui/Button.module.css
+++ b/portfolio/src/components/ui/Button.module.css
@@ -1,19 +1,18 @@
 .button {
   font: inherit;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 2rem;
   border: 1px solid rgb(22, 65, 65);
   color: white;
-  background-color: rgba(2,12,27,0.7);
+  background-color: rgba(2, 12, 27, 0.7);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.26);
   border-radius: 15px;
   cursor: pointer;
   white-space: nowrap;
+  font-size: 1.2rem;
 }
-
 .button:focus {
   outline: none;
 }
-
 .button:hover,
 .button:active {
   background: #495670;
