--- a/portfolio/src/components/working/Working.module.css
+++ b/portfolio/src/components/working/Working.module.css
@@ -4,81 +4,67 @@
   align-items: center;
   margin: 2rem;
 }
-
 .row {
   padding: 1rem;
 }
-
 .working {
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
   margin: 0.2rem;
 }
-
 .heading {
-  font-size: 55px;
+  font-size: 3.2rem;
   padding-bottom: 1rem;
-  text-align: center;
+  padding-left: 1rem;
   color: white;
 }
 .works {
-  padding: 2rem;
-  border: 2px solid white;
-  border-radius: 10px;
-  width: 80vw;
-  margin: 1rem 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  gap: 2rem;
 }
-
 .work {
-  width: 320px;
-  margin: 1rem;
-  box-shadow: 5px 5px 20px #aaa;
+  max-width: 350px;
+  min-height: 350px;
   position: relative;
   overflow: hidden;
-  border-radius: 6px;
+  border-radius: 0.4rem;
   padding: 1rem 1.5rem 2rem 1.5rem;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 .book_card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 300px;
+  min-height: 330px;
+  gap: 1.5rem;
 }
 .work img {
   width: 100%;
+  height: 100%;
   border-radius: 6px;
 }
-
 .work_info {
   color: #eee;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.2rem;
-  padding: 0.5rem 1rem 1rem;
   letter-spacing: 0.5px;
-  font-size: 28px;
+  font-size: 1.7rem;
   transition: transform 0.3s ease-in;
 }
-
 .work_body {
   transition: transform 0.3s ease-in;
 }
-
 .work:hover .work_info {
   transform: translateY(-60%);
 }
-
 .work:hover .work_body {
   transform: translateY(-20%);
 }
-
 .overview {
   background-color: #fff;
   padding: 2rem;
@@ -99,30 +85,23 @@
   -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-
 .work:hover .overview {
   transform: translateY(0);
 }
 .back_content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
+  gap: 0.7rem;
 }
 .texting {
-  padding: 0.1rem;
   font-size: 22px;
 }
-
 .about {
-  padding: 0.1rem;
   font-size: 22px;
   color: #f65454;
 }
-.button {
-  padding-top: 8px;
-}
-
 @media (max-width: 650px) {
   .row {
     padding: 0;
@@ -139,5 +118,5 @@
 @media (max-width: 440px) {
   .texting {
     font-size: 20px;
-  }  
+  }
 }
