--- a/portfolio/src/components/ui/Button.module.css
+++ b/portfolio/src/components/ui/Button.module.css
@@ -1,11 +1,11 @@
 .button {
   font: inherit;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1.5rem;
   border: 1px solid rgb(22, 65, 65);
   color: white;
-  background-color: rgba(2, 12, 27, 0.7);
+  background-color: var(--secondary-color);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.26);
-  border-radius: 15px;
+  border-radius: 8px;
   cursor: pointer;
   white-space: nowrap;
   font-size: 1.2rem;
@@ -18,5 +18,4 @@
   background: #495670;
   color: black;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
-  animation: shake 1s ease-in-out infinite;
 }
