--- a/portfolio/src/components/aboutMe/AboutMe.module.css
+++ b/portfolio/src/components/aboutMe/AboutMe.module.css
@@ -2,27 +2,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2rem;
+  padding: 2rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url("/background.png") no-repeat fixed center/cover;
 }
-
 .row {
   padding: 1rem;
 }
-
 .about {
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
   margin: 0.2rem;
 }
-
 .heading {
   font-size: 35px;
   font-weight: 400;
   color: white;
   padding-left: 1.1rem;
 }
-
 .details_photo {
   display: flex;
   flex-direction: row;
@@ -32,7 +30,6 @@
   margin: 1rem;
   gap: 1rem;
 }
-
 .details {
   display: flex;
   flex-direction: column;
@@ -41,7 +38,6 @@
   gap: 1rem;
   flex: 8;
 }
-
 .details p::before {
   content: "  ";
   display: block;
@@ -54,7 +50,6 @@
   position: absolute;
   left: 6.1%;
 }
-
 @keyframes spinner {
   0% {
     transform: rotate(0deg);
@@ -63,7 +58,6 @@
     transform: rotate(360deg);
   }
 }
-
 .details p {
   font-size: 20px;
   text-align: left;
@@ -72,30 +66,28 @@
   padding-left: 1rem;
   color: white;
 }
-
 .photobox {
   display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 12px;
   padding: 1rem;
   flex: 4;
 }
-
 .photo {
   display: flex;
   border-radius: 12px;
-  padding: 1rem;
+  padding: 0.75rem;
   border: 2px solid white;
 }
-
 .photo img {
   border-radius: 12px;
   height: 300px;
+  object-fit: cover;
 }
-
 span {
   color: rgb(248, 30, 77);
 }
-
 @media (max-width: 900px) {
   .details_photo {
     flex-direction: column;
