--- a/portfolio/src/components/contact/Contact.module.css
+++ b/portfolio/src/components/contact/Contact.module.css
@@ -1,37 +1,34 @@
 .contact {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
-    url(/contact.jpeg) no-repeat fixed center/cover;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  height: 75vh;
+    url(/contact.png) no-repeat fixed center/cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .container_fluid {
-  width: 100%;
-  height: 100%;
+  width: -webkit-fill-available;
 }
 .row {
   display: flex;
   gap: 1rem;
-  height: 100%;
 }
 .rowall {
   display: flex;
-  gap: 1rem;
-  height: 100%;
+  gap: 2rem;
+  padding: 1rem;
+  flex-direction: row-reverse;
 }
 .col_1 {
   flex: 6;
-  margin: 2rem 3rem;
-  height: 100%;
+  min-height: 100%;
 }
 .col_2 {
   flex: 6;
-  margin: 2rem 1rem;
-  height: 100%;
+  border-radius: 10px;
 }
 .items_wrapper {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
-    url(/runner.jpg) no-repeat center center/cover;
+    url(/runner.png) no-repeat center center/cover;
   border-radius: 5px;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -41,9 +38,9 @@
   text-align: center;
   gap: 1rem;
   flex-wrap: wrap;
-  height: 75%;
+  min-height: 100%;
+  border-radius: 10px;
 }
-
 .floating_item {
   background: rgba(0, 0, 0, 0.65);
   border-radius: 5px;
@@ -51,10 +48,10 @@
   margin-left: 1rem;
   margin-right: 1rem;
   padding: 1rem;
+  cursor: pointer;
 }
-
 .link:hover {
-  color: #ed8787;
+  color: var(--secondary-color);
   cursor: pointer;
 }
 .text_light {
@@ -63,47 +60,30 @@
 .text_light_heading {
   color: white;
 }
-
 .red {
   color: rgb(254, 78, 78);
 }
-
 .part_2_text_light {
-  font-weight: 400;
-  font-size: 44px;
+  font-weight: 500;
+  font-size: 2.5rem;
   text-align: center;
   margin-bottom: 1rem;
-  box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
-    rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
-  -moz-box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
-    rgba(255, 254, 254, 0.3) 0px 18px 36px -18px inset;
-  -webkit-box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
-    rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
-  border-radius: 12px;
+  border-radius: 6px;
 }
-
 .form_group {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   padding: 1rem;
-  border-radius: 12px;
-  box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
-    rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
-  -moz-box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
-    rgba(255, 254, 254, 0.3) 0px 18px 36px -18px inset;
-  -webkit-box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
-    rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
 }
-
 .form_control {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  all: unset;
+  padding: 1rem;
   margin-bottom: 1rem;
   color: white;
+  border: 1px solid white;
 }
-
 .but_red {
   border: 2px solid rgb(244, 69, 69);
   border-radius: 8px;
@@ -111,35 +91,30 @@
   color: rgb(244, 69, 69);
   font-weight: 500;
   padding: 0.5rem;
+  text-align: center;
 }
-
 .but_red:hover {
   border: 2px solid black;
   background-color: rgb(244, 69, 69);
+  cursor: pointer;
   color: black;
   border-radius: 8px;
 }
-
 .first_item {
   animation: float 15s infinite;
 }
-
 .second_item {
   animation: float 20s ease-in infinite;
 }
-
 .third_item {
   animation: float 40s linear infinite;
 }
-
 .fourth_item {
   animation: float 30s infinite;
 }
-
 .fifth_item {
   animation: float 25s ease-in-out infinite;
 }
-
 @keyframes float {
   0% {
     transform: translateX(0);
@@ -166,14 +141,12 @@
 
 .contact_form input:focus,
 .contact_form textarea:focus {
-  background: rgba(0, 0, 0, 0.8);
+  background: var(--secondary-color);
   box-shadow: none;
 }
-
 .form_control {
   width: 75%;
 }
-
 @media (max-width: 768px) {
   @keyframes float {
     0% {
@@ -181,7 +154,7 @@
     }
 
     50% {
-      transform: translateX(-30px);
+      transform: translateX(-20px);
     }
 
     100% {
@@ -189,7 +162,6 @@
     }
   }
 }
-
 @media (max-width: 900px) {
   .rowall {
     flex-direction: column;
@@ -198,10 +170,12 @@
     height: auto;
   }
 }
-
 .error_message {
   background-color: #ffcccb;
   border-radius: 4px;
   padding: 8px 16px 8px 16px;
   width: 100%;
+  margin-bottom: 1rem;
+  width: 100%;
+  text-align: center;
 }
