--- a/portfolio/src/components/language/Card.module.css
+++ b/portfolio/src/components/language/Card.module.css
@@ -17,7 +17,7 @@
 }
 .book_card {
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(141, 134, 134, 0.24) 0px 5px 15px;
   transition: all 0.8s;
   max-width: 350px;
   min-height: 320px;
@@ -26,17 +26,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 1.75rem;
+  border-radius: 10px;
+  background: var(--primary-color);
 }
 .card_header {
   font-size: 1.6rem;
+  font-weight: 800;
   color: white;
   text-align: center;
 }
 .img_fluid {
   width: 100%;
   height: 100%;
-  border-radius: 6px;
+  border-radius: 8px;
+  object-fit: cover;
 }
 .card_footer {
   font-size: 1.6rem;
@@ -58,7 +62,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 1.75rem;
+  border-radius: 10px;
 }
 .back_content {
   position: absolute;
@@ -80,6 +85,7 @@
 }
 .texting {
   font-size: 1.7rem;
+  font-weight: 800;
 }
 .about {
   font-size: 1.5rem;
