--- a/portfolio/src/components/last/Last.module.css
+++ b/portfolio/src/components/last/Last.module.css
@@ -2,6 +2,8 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   min-height: 10vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url("/contact.png") no-repeat fixed center/cover;
 }
 .container_fluid {
   width: 100%;
@@ -25,12 +27,12 @@
   font-size: 24px;
   text-decoration: none;
   padding-left: 0rem;
-  gap: 0.5rem;
+  gap: 2rem;
 }
 .nav_link {
   color: aliceblue;
   transition: all 0.3s;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 .copyright {
   font-size: 22px;
