--- a/portfolio/src/components/navigation/Navigation.module.css
+++ b/portfolio/src/components/navigation/Navigation.module.css
@@ -33,7 +33,7 @@
   width: 40px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   position: absolute;
@@ -44,7 +44,7 @@
 }
 
 .hamburgerchange:hover {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 .navigation {
@@ -55,7 +55,7 @@
   padding: 0% 2%;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -87,7 +87,7 @@
 .navigationmenu li {
   list-style-type: none;
   margin: auto 1.2rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .active {
@@ -99,9 +99,7 @@
 }
 
 .active:hover {
-  color: rgb(244, 97, 97);
-  border-bottom: 2.5px solid white;
-  animation: bgPos 1.5s linear infinite;
+  color: #b1b1b1;
 }
 
 .hamburger {
@@ -110,7 +108,7 @@
   width: 40px;
   padding: 0.5rem;
   border-radius: 50%;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
   position: absolute;
@@ -122,7 +120,7 @@
 }
 
 .hamburger:hover {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 @media screen and (max-width: 720px) {
@@ -150,7 +148,7 @@
     flex-direction: column;
     width: 100%;
     height: auto;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
     border-top: 1px solid black;
     list-style: none;
@@ -183,7 +181,7 @@
     list-style-type: none;
     margin: 0.8rem auto;
     padding: 0;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 
   .navigationmenuexpanded li a {
@@ -197,7 +195,7 @@
   .navigationmenuexpanded a:hover,
   .navigationmenuexpanded a:active,
   .navigationmenuexpanded a:active {
-    color: black;
+    color: #b1b1b1;
   }
   .first {
     display: block;
@@ -213,20 +211,5 @@
 @media screen and (max-width: 720px) {
   .navigationmenuexpanded ul {
     display: block;
-  }
-}
-
-@keyframes bgPos {
-  0% {
-    border-color: rgb(200, 200, 200);
-  }
-  25% {
-    border-color: rgb(150, 150, 150);
-  }
-  50% {
-    border-color: rgb(100, 100, 100);
-  }
-  100% {
-    border-color: rgb(50, 50, 50);
   }
 }
