--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,6 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Oxanium:wght@300&display=swap");
 * {
-  font-family: "Ibarra Real Nova", serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Inter", sans-serif;
 }
 body {
   margin: 0;
@@ -14,6 +18,9 @@ html {
   overflow-x: hidden;
 }
 :root {
-  --primary-color: #1f2833;
-  --secondary-color: #4e4e50;
+  --primary-color: #010314;
+  --secondary-color: #3a3b4a;
+}
+::-webkit-scrollbar {
+  display: none;
 }
