--- a/portfolio/src/components/navigation/Navigation.module.css
+++ b/portfolio/src/components/navigation/Navigation.module.css
@@ -59,6 +59,8 @@
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url("/background.png") no-repeat fixed center/cover;
 }
 
 .logo img {
@@ -175,6 +177,8 @@
       rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
       rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
       rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+      url("/background.png") no-repeat fixed center/cover;
   }
   .navigationmenuexpanded li {
     text-align: center;
