--- a/portfolio/src/components/language/Language.module.css
+++ b/portfolio/src/components/language/Language.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 1rem;
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/background.png") no-repeat fixed center/cover;
+    url("/background.png") no-repeat fixed left/cover;
 }
 .row {
   padding: 0.1rem 1rem;
