--- a/portfolio/src/components/working/Working.module.css
+++ b/portfolio/src/components/working/Working.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 2rem;
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/workingbackground.png") no-repeat fixed center/cover;
+    url("/workingbackground.png") no-repeat fixed left/cover;
 }
 .row {
   padding: 1rem;
