--- a/portfolio/src/components/working/WorkingCard.module.css
+++ b/portfolio/src/components/working/WorkingCard.module.css
@@ -17,7 +17,7 @@
   transform: translate(-50%, -50%);
   z-index: 10000;
   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/background.png") no-repeat fixed center/cover;
+    url("/background.png") no-repeat fixed left/cover;
   border-radius: 10px;
 }
 .box {
@@ -69,7 +69,7 @@
 .box > button > a {
   text-decoration: none;
   font-weight: 900;
-  color: var(--secondary-color);
+  color: #cacaca;
 }
 .cross {
   position: absolute;
@@ -105,5 +105,16 @@
   }
   to {
     transform: translateY(0%);
+  }
+}
+@media (max-width: 400px) {
+  ._box_1rqzu_45 > h1 {
+    font-size: 1.2rem;
+  }
+  ._box_1rqzu_45 > p {
+    font-size: 0.7rem;
+  }
+  ._box_1rqzu_45 {
+    overflow-y: scroll;
   }
 }
