--- a/portfolio/src/components/aboutMe/AboutMe.module.css
+++ b/portfolio/src/components/aboutMe/AboutMe.module.css
@@ -102,6 +102,9 @@ span {
     padding: 0;
     margin: 0;
   }
+  .details p {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 440px) {
@@ -127,6 +130,6 @@ span {
     height: 180px;
   }
   .details p {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
