--- a/portfolio/src/components/working/Working.module.css
+++ b/portfolio/src/components/working/Working.module.css
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 4rem;
 }
 .work {
   max-width: 350px;
@@ -71,6 +71,11 @@
   font-size: 1.7rem;
   transition: transform 0.3s ease-in;
 }
+@media (max-width: 950px) {
+  .works {
+    gap: 3rem;
+  }
+}
 @media (max-width: 650px) {
   .row {
     padding: 0;
@@ -82,5 +87,6 @@
   .works {
     padding: 0;
     margin: 0;
+    gap: 2rem;
   }
 }
