--- a/portfolio/src/components/aboutMe/AboutMe.module.css
+++ b/portfolio/src/components/aboutMe/AboutMe.module.css
@@ -3,8 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/background.png") no-repeat fixed left/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
 }
 .row {
   padding: 1rem;
@@ -38,17 +37,20 @@
   gap: 1rem;
   flex: 8;
 }
-.details p::before {
-  content: "  ";
-  display: block;
-  width: 4px;
-  height: 4px;
+.details > p {
+  position: relative;
+}
+.details p > span {
+  width: 0.75rem;
+  height: 0.75rem;
   border-radius: 50%;
   border: 4px solid rgb(0, 0, 0);
   border-color: #000000 black #ffffff white;
   animation: spinner 6s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   position: absolute;
-  left: 6.1%;
+  top: 30%;
+  left: -6px;
+  transform: translateY(-50%);
 }
 @keyframes spinner {
   0% {
