--- a/portfolio/src/components/language/Language.module.css
+++ b/portfolio/src/components/language/Language.module.css
@@ -3,8 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/background.png") no-repeat fixed left/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
 }
 .row {
   padding: 0.1rem 1rem;
