--- a/portfolio/src/components/navigation/Navigation.module.css
+++ b/portfolio/src/components/navigation/Navigation.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   z-index: 10;
+  backdrop-filter: blur(28px);
 }
 .line1,
 .line2,
@@ -59,8 +60,7 @@
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/background.png") no-repeat fixed left/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
 }
 
 .logo img {
@@ -177,8 +177,7 @@
       rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
       rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
       rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-      url("/background.png") no-repeat fixed left/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
   }
   .navigationmenuexpanded li {
     text-align: center;
