--- a/portfolio/src/components/working/Working.module.css
+++ b/portfolio/src/components/working/Working.module.css
@@ -3,8 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/workingbackground.png") no-repeat fixed left/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
 }
 .row {
   padding: 1rem;
@@ -33,8 +32,8 @@
   min-height: 350px;
   border-radius: 0.4rem;
   padding: 1rem 1.5rem 2rem 1.5rem;
-  box-shadow: rgba(172, 171, 171, 0.4) 0px 0px 0px 2px,
-    rgba(172, 172, 172, 0.65) 0px 4px 6px -1px,
+  box-shadow: rgba(209, 209, 209, 0.4) 0px 0px 0px 2px,
+    rgba(224, 220, 220, 0.65) 0px 2px 3px -1px,
     rgba(60, 60, 60, 0.08) 0px 1px 0px inset;
   display: flex;
   flex-direction: column;
