--- a/portfolio/src/components/working/WorkingCard.module.css
+++ b/portfolio/src/components/working/WorkingCard.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(56, 56, 56, 0.75);
   z-index: 10;
 }
 .container {
@@ -16,12 +16,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10000;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url("/background.png") no-repeat fixed left/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 .box {
-  padding: 2rem;
+  padding: 3rem;
   height: 85vh;
   width: 80vw;
   display: flex;
@@ -73,8 +73,8 @@
 }
 .cross {
   position: absolute;
-  top: 0;
-  right: 0rem;
+  top: 0.5rem;
+  right: 0.5rem;
   margin: 1rem;
   font-size: 2rem;
   color: #fff;
