--- a/portfolio/src/components/language/Tool.module.css
+++ b/portfolio/src/components/language/Tool.module.css
@@ -3,9 +3,11 @@
   justify-content: center;
   align-items: center;
   margin: 2rem 1rem 2rem 1rem;
+  width: -webkit-fill-available;
 }
 .row {
   padding: 1rem;
+  width: -webkit-fill-available;
 }
 .tooling {
   display: flex;
@@ -14,34 +16,17 @@
   gap: 2rem;
   justify-content: center;
   align-items: center;
-  animation: jackInTheBox 2s ease forwards;
-}
-@keyframes jackInTheBox {
-  0% {
-    opacity: 0;
-    transform: scale(0.1) rotate(30deg);
-
-    transform-origin: center bottom;
-  }
-  50% {
-    transform: rotate(-10deg);
-  }
-  70% {
-    transform: rotate(3deg);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
+  width: -webkit-fill-available;
 }
 .tooling_box {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
-  flex-wrap: wrap;
   border-radius: 1rem;
   padding: 1rem;
+  width: -webkit-fill-available;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 15%));
+  gap: 1rem;
+  justify-content: center;
 }
 .box_content {
   align-items: center;
@@ -50,12 +35,41 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  flex: 0 1 15%;
   min-height: 50px;
   justify-content: space-evenly;
   padding: 1rem;
   box-shadow: rgba(199, 199, 199, 0.24) 0px 3px 4px;
   min-width: 8rem;
+  animation: bumpOutLikeHeartBeatEven 0.6s cubic-bezier(0.42, 0, 0.58, 1) both;
+  animation-timeline: view(80% 5%);
+}
+.even-animation {
+  animation: bumpOutLikeHeartBeatEven 0.6s cubic-bezier(0.42, 0, 0.58, 1) both !important;
+  animation-timeline: view(80% 5%) !important;
+}
+.odd-animation {
+  animation: bumpOutLikeHeartBeatOdd 0.6s cubic-bezier(0.42, 0, 0.58, 1) both !important;
+  animation-timeline: view(80% 5%) !important;
+}
+@keyframes bumpOutLikeHeartBeatEven {
+  from {
+    opacity: 0;
+    transform: scale(0.1) translateX(125%);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1) translateX(0%);
+  }
+}
+@keyframes bumpOutLikeHeartBeatOdd {
+  from {
+    opacity: 0;
+    transform: scale(0.1) translateX(-125%);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1) translateX(0%);
+  }
 }
 .box_icon .icon {
   height: 3rem;
