--- a/portfolio/src/components/language/Card.module.css
+++ b/portfolio/src/components/language/Card.module.css
@@ -14,6 +14,18 @@
 }
 .rotate {
   perspective: 100rem;
+  animation: zoomOut 0.6s cubic-bezier(0.42, 0, 0.58, 1) 0s 1 normal both;
+  animation-timeline: view(80% 5%);
+}
+@keyframes zoomOut {
+  from {
+    opacity: 0;
+    transform: scale(0.1);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1.01);
+  }
 }
 .book_card {
   position: relative;
