--- a/portfolio/src/components/working/Working.module.css
+++ b/portfolio/src/components/working/Working.module.css
@@ -27,6 +27,24 @@
   flex-wrap: wrap;
   gap: 4rem;
 }
+.zoomOutAnimation {
+  animation: zoomOut 0.6s cubic-bezier(0.42, 0, 0.58, 1) 0s 1 normal both;
+  animation-timeline: view(80% 5%);
+}
+@keyframes zoomOut {
+  0% {
+    transform: scale(0.75);
+    filter: blur(3px);
+  }
+  50% {
+    transform: scale(1.05);
+    filter: blur(0);
+  }
+  100% {
+    transform: scale(1);
+    filter: blur(0);
+  }
+}
 .work {
   max-width: 350px;
   min-height: 350px;
@@ -43,6 +61,10 @@
   object-fit: cover;
   border-radius: 10px;
   position: relative;
+}
+.works:has(:hover) .work:not(:hover) {
+  transition: filter 0.2s ease;
+  filter: blur(3px);
 }
 .work > .link_svg {
   position: absolute;
